persist basics works

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,8 +37,11 @@ akka.contrib.persistence.mongodb.mongo.snaps-fsync = false
 
 eventhubs-1 {
 
-  snapShotInterval = 100
-  snapShotInterval = ${?SNAP_SHOT_INTERVAL}
+  snapshotInterval = 100
+  snapshotInterval = ${?SNAP_SHOT_INTERVAL}
+
+  persist = false
+  persist = ${?EVENTHUBS_1_PERSIST}
 
   offsetPersistenceId = "my_example_eventhubsOffset"
 
