--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,6 +43,9 @@ eventhubs-1 {
   persist = false
   persist = ${?EVENTHUBS_1_PERSIST}
 
+  persistFreq = 1
+  persistFreq = ${?EVENTHUBS_1_PERSIST_FREQ}
+
   offsetPersistenceId = "my_example_eventhubsOffset"
 
   connection {
