dispatcher and router

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,6 +35,9 @@ akka.contrib.persistence.mongodb.mongo.journal-fsync = false
 akka.contrib.persistence.mongodb.mongo.snaps-wtimeout = 3s
 akka.contrib.persistence.mongodb.mongo.snaps-fsync = false
 
+akka.contrib.persistence.mongodb.mongo.breaker.maxTries = 1
+akka.contrib.persistence.mongodb.mongo.breaker.timeout.call = 10s
+
 eventhubs-1 {
 
   snapshotInterval = 100
@@ -71,6 +74,21 @@ eventhubs-1 {
     receiverBatchSize = 1
     receiverBatchSize = ${?EVENTHUBS_1_RECEIVER_BATCH_SIZE}
 
+    readersPerPartition = 1
+    readersPerPartition = ${?EVENTHUBS_1_READERS_PER_PARTITION}
+  }
+
+  dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+      core-pool-size-min = 4
+      core-pool-size-factor = 2.0
+      core-pool-size-max = 8
+    }
+    throughput = 10
+    mailbox-capacity = -1
+    mailbox-type = ""
   }
 
 }
