--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -92,3 +92,58 @@ eventhubs-1 {
   }
 
 }
+
+eventhubs-2 {
+
+  snapshotInterval = 100
+  snapshotInterval = ${?SNAP_SHOT_INTERVAL}
+
+  persist = false
+  persist = ${?EVENTHUBS_2_PERSIST}
+
+  persistFreq = 1
+  persistFreq = ${?EVENTHUBS_2_PERSIST_FREQ}
+
+  offsetPersistenceId = "my_example_eventhubsOffset"
+
+  connection {
+
+    endpoint = ${?EVENTHUBS_2_ENDPOINT}
+
+    name = ${?EVENTHUBS_2_NAME}
+
+    namespace = ${?EVENTHUBS_2_NAMESPACE}
+
+    partitions = ${?EVENTHUBS_2_PARTITION_COUNT}
+
+    accessPolicy = ${?EVENTHUBS_2_ACCESS_POLICY}
+
+    accessKey = ${?EVENTHUBS_2_ACCESS_KEY}
+
+    consumerGroup = "$Default"
+    consumerGroup = ${?EVENTHUBS_2_CONSUMER_GROUP}
+
+    receiverTimeout = 120s
+    receiverTimeout = ${?EVENTHUBS_2_RECEIVER_TIMEOUT}
+
+    receiverBatchSize = 1
+    receiverBatchSize = ${?EVENTHUBS_2_RECEIVER_BATCH_SIZE}
+
+    readersPerPartition = 1
+    readersPerPartition = ${?EVENTHUBS_2_READERS_PER_PARTITION}
+  }
+
+  dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+      core-pool-size-min = 4
+      core-pool-size-factor = 2.0
+      core-pool-size-max = 8
+    }
+    throughput = 10
+    mailbox-capacity = -1
+    mailbox-type = ""
+  }
+
+}
