--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,8 +21,24 @@ akka {
 
 }
 
-akka.persistence.journal.plugin = "akka-contrib-mongodb-persistence-journal"
-akka.persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
+redis {
+  host = "localhost"
+  host = ${?REDIS_HOST}
+  port = 6379
+  port = ${?REDIS_PORT}
+  # optional
+  password = "topsecret"
+  password = ${?REDIS_PASSWORD}
+  db = 1
+  db = ${?REDIS_DB}
+}
+
+akka.persistence.journal.plugin = "akka-persistence-redis.journal"
+akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
+
+//akka.persistence.journal.plugin = "akka-contrib-mongodb-persistence-journal"
+//akka.persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
+
 // note: "akka_persistence_realtime" and "akka_persistence_metadata" are not controlled here.  todo: reseaerch "suffixed collection names"
 akka.contrib.persistence.mongodb.mongo.mongouri = ${MONGOURI}
 akka.contrib.persistence.mongodb.mongo.journal-collection = "my_example_persistent_journal"
