--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,11 +33,11 @@ redis {
   db = ${?REDIS_DB}
 }
 
-//akka.persistence.journal.plugin = "akka-persistence-redis.journal"
-//akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
+akka.persistence.journal.plugin = "akka-persistence-redis.journal"
+akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
 
-akka.persistence.journal.plugin = "akka-contrib-mongodb-persistence-journal"
-akka.persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
+//akka.persistence.journal.plugin = "akka-contrib-mongodb-persistence-journal"
+//akka.persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
 
 // note: "akka_persistence_realtime" and "akka_persistence_metadata" are not controlled here.  todo: reseaerch "suffixed collection names"
 akka.contrib.persistence.mongodb.mongo.mongouri = ${MONGOURI}
