--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -54,6 +54,23 @@ akka.contrib.persistence.mongodb.mongo.snaps-fsync = false
 akka.contrib.persistence.mongodb.mongo.breaker.maxTries = 1
 akka.contrib.persistence.mongodb.mongo.breaker.timeout.call = 10s
 
+eventhubs {
+
+  dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+      core-pool-size-min = 4
+      core-pool-size-factor = 2.0
+      core-pool-size-max = 8
+    }
+    throughput = 10
+    mailbox-capacity = -1
+    mailbox-type = ""
+  }
+
+}
+
 eventhubs-1 {
 
   snapshotInterval = 100
