--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/akka-eventhubs"]
 	path = lib/akka-eventhubs
 	url = git@github.com:navicore/akka-eventhubs.git
+[submodule "lib/navipath"]
+	path = lib/navipath
+	url = git@github.com:navicore/NaviPath.git
