--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -86,6 +86,9 @@ eventhubs-1 {
 
   connection {
 
+    defaultOffset = "LATEST"
+    defaultOffset = ${?EVENTHUBS_1_DEFAULT_OFFSET}
+
     endpoint = ${EVENTHUBS_1_ENDPOINT}
 
     name = ${EVENTHUBS_1_NAME}
