--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -40,7 +40,7 @@ akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
 //akka.persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
 
 // note: "akka_persistence_realtime" and "akka_persistence_metadata" are not controlled here.  todo: reseaerch "suffixed collection names"
-akka.contrib.persistence.mongodb.mongo.mongouri = ${MONGOURI}
+akka.contrib.persistence.mongodb.mongo.mongouri = ${?MONGOURI}
 akka.contrib.persistence.mongodb.mongo.journal-collection = "my_example_persistent_journal"
 akka.contrib.persistence.mongodb.mongo.journal-index = "my_example_journal_index"
 akka.contrib.persistence.mongodb.mongo.snaps-collection = "my_example_persistent_snapshots"
