--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,9 @@ main {
   appName = "AkkaEventhubs"
   appName = ${?APP_NAME}
 
+  pretty = true
+  pretty = ${?PRETTY}
+
 }
 
 akka {
@@ -89,17 +92,15 @@ eventhubs-1 {
     defaultOffset = "LATEST"
     defaultOffset = ${?EVENTHUBS_1_DEFAULT_OFFSET}
 
-    endpoint = ${EVENTHUBS_1_ENDPOINT}
+    partitions = ${?EVENTHUBS_1_PARTITION_COUNT}
 
-    name = ${EVENTHUBS_1_NAME}
+    endpoint = ${?EVENTHUBS_1_ENDPOINT}
 
-    namespace = ${EVENTHUBS_1_NAMESPACE}
-
-    partitions = ${EVENTHUBS_1_PARTITION_COUNT}
-
-    accessPolicy = ${EVENTHUBS_1_ACCESS_POLICY}
-
-    accessKey = ${EVENTHUBS_1_ACCESS_KEY}
+    connStr = ${?EVENTHUBS_1_CONNSTR}
+    name = ${?EVENTHUBS_1_NAME}
+    namespace = ${?EVENTHUBS_1_NAMESPACE}
+    accessPolicy = ${?EVENTHUBS_1_ACCESS_POLICY}
+    accessKey = ${?EVENTHUBS_1_ACCESS_KEY}
 
     consumerGroup = "$Default"
     consumerGroup = ${?EVENTHUBS_1_CONSUMER_GROUP}
@@ -129,57 +130,3 @@ eventhubs-1 {
 
 }
 
-eventhubs-2 {
-
-  snapshotInterval = 100
-  snapshotInterval = ${?SNAP_SHOT_INTERVAL}
-
-  persist = false
-  persist = ${?EVENTHUBS_2_PERSIST}
-
-  persistFreq = 1
-  persistFreq = ${?EVENTHUBS_2_PERSIST_FREQ}
-
-  offsetPersistenceId = "my_example_eventhubsOffset"
-
-  connection {
-
-    endpoint = ${?EVENTHUBS_2_ENDPOINT}
-
-    name = ${?EVENTHUBS_2_NAME}
-
-    namespace = ${?EVENTHUBS_2_NAMESPACE}
-
-    partitions = ${?EVENTHUBS_2_PARTITION_COUNT}
-
-    accessPolicy = ${?EVENTHUBS_2_ACCESS_POLICY}
-
-    accessKey = ${?EVENTHUBS_2_ACCESS_KEY}
-
-    consumerGroup = "$Default"
-    consumerGroup = ${?EVENTHUBS_2_CONSUMER_GROUP}
-
-    receiverTimeout = 120s
-    receiverTimeout = ${?EVENTHUBS_2_RECEIVER_TIMEOUT}
-
-    receiverBatchSize = 1
-    receiverBatchSize = ${?EVENTHUBS_2_RECEIVER_BATCH_SIZE}
-
-    readersPerPartition = 1
-    readersPerPartition = ${?EVENTHUBS_2_READERS_PER_PARTITION}
-  }
-
-  dispatcher {
-    type = Dispatcher
-    executor = "thread-pool-executor"
-    thread-pool-executor {
-      core-pool-size-min = 4
-      core-pool-size-factor = 2.0
-      core-pool-size-max = 8
-    }
-    throughput = 10
-    mailbox-capacity = -1
-    mailbox-type = ""
-  }
-
-}
