--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -89,18 +89,12 @@ eventhubs-1 {
 
   connection {
 
+    connStr = ${EVENTHUBS_1_CONNSTR}
+
     defaultOffset = "LATEST"
     defaultOffset = ${?EVENTHUBS_1_DEFAULT_OFFSET}
 
     partitions = ${?EVENTHUBS_1_PARTITION_COUNT}
-
-    endpoint = ${?EVENTHUBS_1_ENDPOINT}
-
-    connStr = ${?EVENTHUBS_1_CONNSTR}
-    name = ${?EVENTHUBS_1_NAME}
-    namespace = ${?EVENTHUBS_1_NAMESPACE}
-    accessPolicy = ${?EVENTHUBS_1_ACCESS_POLICY}
-    accessKey = ${?EVENTHUBS_1_ACCESS_KEY}
 
     consumerGroup = "$Default"
     consumerGroup = ${?EVENTHUBS_1_CONSUMER_GROUP}
@@ -113,6 +107,56 @@ eventhubs-1 {
 
     readersPerPartition = 1
     readersPerPartition = ${?EVENTHUBS_1_READERS_PER_PARTITION}
+  }
+
+  dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+      core-pool-size-min = 4
+      core-pool-size-factor = 2.0
+      core-pool-size-max = 8
+    }
+    throughput = 10
+    mailbox-capacity = -1
+    mailbox-type = ""
+  }
+
+}
+
+eventhubs-2 {
+
+  snapshotInterval = 100
+  snapshotInterval = ${?SNAP_SHOT_INTERVAL}
+
+  persist = false
+  persist = ${?EVENTHUBS_2_PERSIST}
+
+  persistFreq = 1
+  persistFreq = ${?EVENTHUBS_2_PERSIST_FREQ}
+
+  offsetPersistenceId = "your_example_eventhubsOffset"
+
+  connection {
+
+    connStr = ${EVENTHUBS_2_CONNSTR}
+
+    defaultOffset = "LATEST"
+    defaultOffset = ${?EVENTHUBS_2_DEFAULT_OFFSET}
+
+    partitions = ${?EVENTHUBS_2_PARTITION_COUNT}
+
+    consumerGroup = "$Default"
+    consumerGroup = ${?EVENTHUBS_2_CONSUMER_GROUP}
+
+    receiverTimeout = 120s
+    receiverTimeout = ${?EVENTHUBS_2_RECEIVER_TIMEOUT}
+
+    receiverBatchSize = 1
+    receiverBatchSize = ${?EVENTHUBS_2_RECEIVER_BATCH_SIZE}
+
+    readersPerPartition = 1
+    readersPerPartition = ${?EVENTHUBS_2_READERS_PER_PARTITION}
   }
 
   dispatcher {
