--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -74,7 +74,7 @@ eventhubs {
 
 }
 
-eventhubs-1 {
+eventhubs-in {
 
   snapshotInterval = 100
   snapshotInterval = ${?SNAP_SHOT_INTERVAL}
@@ -124,7 +124,7 @@ eventhubs-1 {
 
 }
 
-eventhubs-2 {
+eventhubs-out {
 
   snapshotInterval = 100
   snapshotInterval = ${?SNAP_SHOT_INTERVAL}
