pattern for fatal errors

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -80,33 +80,33 @@ eventhubs-in {
   snapshotInterval = ${?SNAP_SHOT_INTERVAL}
 
   persist = false
-  persist = ${?EVENTHUBS_1_PERSIST}
+  persist = ${?EVENTHUBS_IN_PERSIST}
 
   persistFreq = 1
-  persistFreq = ${?EVENTHUBS_1_PERSIST_FREQ}
+  persistFreq = ${?EVENTHUBS_IN_PERSIST_FREQ}
 
   offsetPersistenceId = "my_example_eventhubsOffset"
 
   connection {
 
-    connStr = ${EVENTHUBS_1_CONNSTR}
+    connStr = ${EVENTHUBS_IN_CONNSTR}
 
     defaultOffset = "LATEST"
-    defaultOffset = ${?EVENTHUBS_1_DEFAULT_OFFSET}
+    defaultOffset = ${?EVENTHUBS_IN_DEFAULT_OFFSET}
 
-    partitions = ${?EVENTHUBS_1_PARTITION_COUNT}
+    partitions = ${?EVENTHUBS_IN_PARTITION_COUNT}
 
     consumerGroup = "$Default"
-    consumerGroup = ${?EVENTHUBS_1_CONSUMER_GROUP}
+    consumerGroup = ${?EVENTHUBS_IN_CONSUMER_GROUP}
 
     receiverTimeout = 120s
-    receiverTimeout = ${?EVENTHUBS_1_RECEIVER_TIMEOUT}
+    receiverTimeout = ${?EVENTHUBS_IN_RECEIVER_TIMEOUT}
 
     receiverBatchSize = 1
-    receiverBatchSize = ${?EVENTHUBS_1_RECEIVER_BATCH_SIZE}
+    receiverBatchSize = ${?EVENTHUBS_IN_RECEIVER_BATCH_SIZE}
 
     readersPerPartition = 1
-    readersPerPartition = ${?EVENTHUBS_1_READERS_PER_PARTITION}
+    readersPerPartition = ${?EVENTHUBS_IN_READERS_PER_PARTITION}
   }
 
   dispatcher {
@@ -130,33 +130,33 @@ eventhubs-out {
   snapshotInterval = ${?SNAP_SHOT_INTERVAL}
 
   persist = false
-  persist = ${?EVENTHUBS_2_PERSIST}
+  persist = ${?EVENTHUBS_OUT_PERSIST}
 
   persistFreq = 1
-  persistFreq = ${?EVENTHUBS_2_PERSIST_FREQ}
+  persistFreq = ${?EVENTHUBS_OUT_PERSIST_FREQ}
 
   offsetPersistenceId = "your_example_eventhubsOffset"
 
   connection {
 
-    connStr = ${EVENTHUBS_2_CONNSTR}
+    connStr = ${EVENTHUBS_OUT_CONNSTR}
 
     defaultOffset = "LATEST"
-    defaultOffset = ${?EVENTHUBS_2_DEFAULT_OFFSET}
+    defaultOffset = ${?EVENTHUBS_OUT_DEFAULT_OFFSET}
 
-    partitions = ${?EVENTHUBS_2_PARTITION_COUNT}
+    partitions = ${?EVENTHUBS_OUT_PARTITION_COUNT}
 
     consumerGroup = "$Default"
-    consumerGroup = ${?EVENTHUBS_2_CONSUMER_GROUP}
+    consumerGroup = ${?EVENTHUBS_OUT_CONSUMER_GROUP}
 
     receiverTimeout = 120s
-    receiverTimeout = ${?EVENTHUBS_2_RECEIVER_TIMEOUT}
+    receiverTimeout = ${?EVENTHUBS_OUT_RECEIVER_TIMEOUT}
 
     receiverBatchSize = 1
-    receiverBatchSize = ${?EVENTHUBS_2_RECEIVER_BATCH_SIZE}
+    receiverBatchSize = ${?EVENTHUBS_OUT_RECEIVER_BATCH_SIZE}
 
     readersPerPartition = 1
-    readersPerPartition = ${?EVENTHUBS_2_READERS_PER_PARTITION}
+    readersPerPartition = ${?EVENTHUBS_OUT_READERS_PER_PARTITION}
   }
 
   dispatcher {
