--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- script: sbt assembly
+  displayName: 'sbt'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'dockerHub'
+    repository: 'navicore/akka-eventhubs-example'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
