--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -139,7 +139,8 @@ eventhubs-out {
 
   connection {
 
-    connStr = ${EVENTHUBS_OUT_CONNSTR}
+    connStr = "haha"
+    connStr = ${?EVENTHUBS_OUT_CONNSTR}
 
     defaultOffset = "LATEST"
     defaultOffset = ${?EVENTHUBS_OUT_DEFAULT_OFFSET}
