--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -89,7 +89,32 @@ eventhubs-in {
 
   connection {
 
-    connStr = ${EVENTHUBS_IN_CONNSTR}
+    //
+    // START CONNECTION STRING SUPPORT
+    //
+    // either define a connection string OR set SPN values below
+    //
+    connStr = ${?EVENTHUBS_IN_CONNSTR}
+    //
+    // END CONNECTION STRING SUPPORT
+    //
+
+    //
+    // START SPN SUPPORT
+    //
+    // either define SPN credentials OR set CONNSTR value above
+    //
+    credentials {
+        app_id = ${?EVENTHUBS_IN_CREDENTIALS_APP_ID}
+        secret = ${?EVENTHUBS_IN_CREDENTIALS_SECRET}
+    }
+
+    tenant_id = ${?EVENTHUBS_IN_CREDENTIALS_TENANT_ID}
+    namespace = ${?EVENTHUBS_IN_NAMESPACE}
+    name = ${?EVENTHUBS_IN_NAME}
+    //
+    // END SPN SUPPORT
+    //
 
     defaultOffset = "LATEST"
     defaultOffset = ${?EVENTHUBS_IN_DEFAULT_OFFSET}
